# AnisotropicRCWA

./: README.md  pyproject.toml
RCWA1D.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notes/: RCWA.ipynb
rcwa/: __init__.py  backend.py  layer.py  solver.py  stack.py  visualize.py  visualize_low_memory.py
