[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rcwa"
dynamic = ["version"]
description = "One-dimensional rigorous coupled-wave analysis tools for layered periodic structures."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]
keywords = [
    "rcwa",
    "electromagnetics",
    "photonics",
    "gratings",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools]
packages = ["rcwa"]

[tool.setuptools.dynamic]
version = { attr = "rcwa.__version__" }
